# cct-data-extractor

./: .gitignore  README.md  packages.txt  pyproject.toml
.devcontainer/: devcontainer.json
app/: CCTDataExtractor.py  main.py
data/processed/: ANEXO 21 = CCT SINTRAFARMA SINCOFAES 2024 X 2025.txt  ANEXO 22 = CCT SINDICOMERCIÁRIOS 2023 X 2025.txt  CCT-SP-SINDAPXSECURITARIOS-2024_vfinal.docx.txt
