[project]
name = "cct-extract-info"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "==3.12.4"
dependencies = [
    "ipywidgets>=8.1.5",
    "langchain-community>=0.3.21",
    "pdf2image>=1.17.0",
    "pdfminer-six>=20250327",
    "pi-heif>=0.22.0",
    "pytesseract>=0.3.13",
    "python-dateutil>=2.9.0.post0",
    "unstructured>=0.17.2",
    "unstructured-inference>=0.8.10",
    "ipykernel>=6.29.5",
    "unstructured-pytesseract>=0.3.15",
    "pymupdf>=1.25.5",
    "langchain-openai>=0.3.12",
    "streamlit>=1.44.1",
    "xlsxwriter>=3.2.2",
]
